--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup": "prisma generate && prisma migrate deploy && prisma db seed",
+    "db-push": "prisma db push"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.1",
+    "@tanstack/react-query": "^4.29.17",
+    "@trpc/client": "^10.32.0",
+    "@trpc/next": "^10.32.0",
+    "@trpc/react-query": "^10.32.0",
+    "@trpc/server": "^10.32.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -17,9 +25,11 @@
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
     "postcss": "8.4.24",
+    "prisma": "^4.16.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zod": "^3.21.4"
   }
 }
