--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "superjson": "^1.12.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
