<fix> added prisma generate to build to fix vercel deployment issue

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "setup": "prisma generate && prisma migrate deploy && prisma db seed",
-    "db-push": "prisma db push"
+    "db-push": "prisma db push",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^4.16.1",
