--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.37.3",
     "eslint-config-next": "13.4.7",
+    "material-symbols": "^0.8.1",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
