--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aashiyaana-nextjs",
+  "name": "the-pineapple-home",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,21 +13,32 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@prisma/client": "^4.16.1",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.29.17",
     "@trpc/client": "^10.32.0",
     "@trpc/next": "^10.32.0",
     "@trpc/react-query": "^10.32.0",
     "@trpc/server": "^10.32.0",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.6.1",
     "cloudinary": "^1.37.3",
+    "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "eslint-config-next": "13.4.7",
+    "lucide-react": "^0.259.0",
     "material-symbols": "^0.8.1",
     "next": "13.4.7",
     "react": "18.2.0",
+    "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
     "superjson": "^1.12.4",
-    "zod": "^3.21.4"
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6",
+    "zod": "^3.21.4",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
