--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.1",
     "@headlessui/react": "^1.7.15",
+    "@highlight-run/next": "^3.1.4",
+    "@highlight-run/react": "^3.2.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
@@ -28,30 +32,33 @@
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "eslint-config-next": "13.4.7",
-    "lucide-react": "^0.259.0",
+    "highlight.run": "^7.3.11",
+    "lucide-react": "^0.263.1",
     "material-symbols": "^0.8.1",
-    "next": "13.4.10",
+    "next": "13.4.12",
+    "next-auth": "^4.22.3",
     "react": "18.2.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
     "superjson": "^1.12.4",
-    "tailwind-merge": "^1.13.2",
+    "tailwind-merge": "~1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "zod": "^3.21.4",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.14",
+    "@types/bcryptjs": "2.4.2",
+    "@types/node": "20.4.4",
+    "@types/react": "18.2.16",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "eslint": "8.43.0",
-    "postcss": "8.4.24",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
+    "eslint": "8.45.0",
+    "postcss": "8.4.27",
+    "prettier": "~3.0.0",
+    "prettier-plugin-tailwindcss": "~0.4.1",
     "prisma": "^5.0.0",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "5.1.3"
   },
