--- a/package.json
+++ b/package.json
@@ -7,40 +7,41 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma": "prisma",
-    "setup": "prisma generate && prisma migrate deploy && prisma db seed",
-    "db-push": "prisma db push",
-    "postinstall": "prisma generate"
+    "drizzle-kit": "drizzle-kit",
+    "generate": "drizzle-kit generate:pg",
+    "introspect": "drizzle-kit introspect:pg",
+    "studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.2",
+    "@auth/drizzle-adapter": "^0.3.2",
     "@headlessui/react": "^1.7.17",
     "@highlight-run/next": "^3.2.0",
     "@highlight-run/react": "^3.2.1",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.2.0",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tanstack/react-query": "^4.33.0",
-    "@trpc/client": "^10.38.1",
-    "@trpc/next": "^10.38.1",
-    "@trpc/react-query": "^10.38.1",
-    "@trpc/server": "^10.38.1",
+    "@tanstack/react-query": "^4.35.3",
+    "@trpc/client": "^10.38.3",
+    "@trpc/next": "^10.38.3",
+    "@trpc/react-query": "^10.38.3",
+    "@trpc/server": "^10.38.3",
+    "@vercel/postgres": "^0.4.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.6.1",
     "cloudinary": "^1.40.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
+    "drizzle-orm": "^0.28.6",
     "eslint-config-next": "13.4.7",
-    "highlight.run": "^7.5.0",
+    "highlight.run": "^7.5.1",
     "lucide-react": "^0.263.1",
     "material-symbols": "^0.8.1",
-    "next": "13.4.19",
+    "next": "13.5.3",
     "next-auth": "^4.23.1",
+    "postgres": "^3.3.5",
     "react": "18.2.0",
-    "react-day-picker": "^8.8.1",
+    "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.4",
+    "react-hook-form": "^7.46.1",
     "superjson": "^1.13.1",
     "tailwind-merge": "~1.14.0",
     "tailwindcss-animate": "^1.0.7",
@@ -53,16 +54,14 @@
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "eslint": "8.45.0",
+    "drizzle-kit": "^0.19.13",
+    "eslint": "8.48.0",
+    "pg": "^8.11.3",
     "postcss": "8.4.27",
     "prettier": "~3.0.3",
     "prettier-plugin-tailwindcss": "~0.4.1",
-    "prisma": "^5.2.0",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "5.1.3"
-  },
-  "prisma": {
-    "seed": "node --no-warnings --loader ts-node/esm prisma/seed.ts"
   }
 }
