--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^0.3.2",
+    "@auth/drizzle-adapter": "^0.3.7",
     "@headlessui/react": "^1.7.17",
     "@highlight-run/next": "^3.2.0",
     "@highlight-run/react": "^3.2.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.35.3",
@@ -26,41 +28,42 @@
     "@trpc/server": "^10.38.3",
     "@vercel/postgres": "^0.4.2",
     "bcryptjs": "^2.4.3",
-    "class-variance-authority": "^0.6.1",
+    "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.40.0",
-    "clsx": "^1.2.1",
+    "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
-    "drizzle-orm": "^0.28.6",
+    "drizzle-orm": "^0.29.0",
     "eslint-config-next": "13.4.7",
     "highlight.run": "^7.5.1",
-    "lucide-react": "^0.263.1",
+    "lucide-react": "^0.284.0",
     "material-symbols": "^0.8.1",
-    "next": "13.5.3",
-    "next-auth": "^4.23.1",
+    "next": "14.0.3",
+    "next-auth": "^4.24.5",
+    "next-themes": "^0.2.1",
     "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "superjson": "^1.13.1",
-    "tailwind-merge": "~1.14.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.2",
-    "zustand": "^4.4.1"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.2",
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "10.4.16",
     "drizzle-kit": "^0.19.13",
     "eslint": "8.48.0",
     "pg": "^8.11.3",
     "postcss": "8.4.27",
     "prettier": "~3.0.3",
     "prettier-plugin-tailwindcss": "~0.4.1",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "3.3.5",
     "ts-node": "^10.9.1",
     "typescript": "5.1.3"
   }
