next env installed

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@next/env": "^14.0.3",
     "@types/bcryptjs": "2.4.2",
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
