<feat> added view invoice option

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/places/[place]"
+    "app/places/[place]",
+    "drizzle/seed.mjs"
   ],
   "exclude": ["node_modules"]
 }
