--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:generate": "drizzle-kit generate:pg",
     "db:push": "drizzle-kit push:pg",
     "db:introspect": "drizzle-kit introspect:pg",
-    "studio": "drizzle-kit studio"
+    "studio": "drizzle-kit studio",
+    "drizzle:seed": "node --loader esbuild-register/loader -r esbuild-register ./drizzle/seed.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.17",
@@ -64,6 +65,7 @@
     "@types/react-dom": "^18.2.21",
     "autoprefixer": "10.4.16",
     "drizzle-kit": "^0.20.14",
+    "esbuild-register": "^3.5.0",
     "eslint": "8.48.0",
     "pg": "^8.11.3",
     "postcss": "8.4.33",
