<fix> removed manualsubqueries and replaced with orm queries

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/places/[place]",
-    "drizzle/seed.mjs"
+    "drizzle/seed.ts"
   ],
   "exclude": ["node_modules"]
 }
