--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "db:push": "drizzle-kit push:pg",
     "db:introspect": "drizzle-kit introspect:pg",
     "studio": "drizzle-kit studio",
-    "drizzle:seed": "node --loader esbuild-register/loader -r esbuild-register ./drizzle/seed.ts"
+    "seed": "node -r esbuild-register ./drizzle/seed.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.17",
