--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@highlight-run/next": "^3.2.0",
     "@highlight-run/react": "^3.2.1",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
