<feat> moved from railway to turso

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "drizzle-kit": "drizzle-kit",
-    "db:generate": "drizzle-kit generate:pg",
-    "db:push": "drizzle-kit push:pg",
-    "db:introspect": "drizzle-kit introspect:pg",
+    "db:migrate": "drizzle-kit migrate",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
+    "db:introspect": "drizzle-kit introspect",
     "studio": "drizzle-kit studio",
     "seed": "node -r esbuild-register ./drizzle/seed.ts"
   },
@@ -20,6 +21,7 @@
     "@highlight-run/next": "^3.2.0",
     "@highlight-run/react": "^3.2.2",
     "@hookform/resolvers": "^3.6.0",
+    "@libsql/client": "^0.6.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
