--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "postgres": "^3.4.4",
+    "posthog-js": "^1.139.3",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
