--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.41.3",
     "clsx": "^2.1.1",
-    "date-fns": "^2.30.0",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "drizzle-orm": "^0.32.0",
     "embla-carousel-react": "^8.1.6",
     "highlight.run": "^7.6.0",
@@ -46,8 +47,7 @@
     "next": "~14.2.5",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
-    "postgres": "^3.4.4",
-    "posthog-js": "^1.147.0",
+    "posthog-js": "^1.148.0",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
@@ -63,7 +63,7 @@
     "@biomejs/biome": "1.5.3",
     "@next/env": "^14.2.5",
     "@types/bcryptjs": "2.4.2",
-    "@types/node": "^20.14.10",
+    "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "10.4.16",
