--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "drizzle-orm": "^0.32.0",
+    "embla-carousel-autoplay": "^8.1.6",
     "embla-carousel-react": "^8.1.6",
     "highlight.run": "^7.6.0",
     "lucide-react": "^0.284.0",
