--- a/package.json
+++ b/package.json
@@ -28,10 +28,8 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query": "^5.51.9",
     "@trpc/client": "^10.45.2",
-    "@trpc/next": "^10.45.2",
-    "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -63,6 +61,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
     "@next/env": "^14.2.5",
+    "@tanstack/react-query-devtools": "^5.51.9",
     "@types/bcryptjs": "2.4.2",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
