--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "the-pineapple-home",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0",
+    "pnpm": ">=9.5.0"
+  },
+  "packageManager": "pnpm@9.5.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
