--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "autoprefixer": "10.4.16",
     "drizzle-kit": "^0.22.8",
     "esbuild-register": "^3.5.0",
-    "eslint": "8.48.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "^14.2.5",
     "pg": "^8.12.0",
     "postcss": "8.4.33",
     "tailwindcss": "3.4.1",
