--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "drizzle-orm": "^0.32.0",
-    "embla-carousel-autoplay": "^8.1.6",
+    "embla-carousel": "^8.1.7",
+    "embla-carousel-autoplay": "^8.1.7",
+    "embla-carousel-fade": "^8.1.7",
     "embla-carousel-react": "^8.1.6",
     "highlight.run": "^7.6.0",
     "lucide-react": "^0.284.0",
